--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="src/assets/css/plugins/countdownTimer.css" />
   <link rel="stylesheet" href="src/assets/css/plugins/slick.min.css" />
   <link rel="stylesheet" href="src/assets/css/plugins/bootstrap.css" />
-
+  <link rel="stylesheet" href="src/assets/css/vendor/ecicons.min.css">
   <!-- Main Style -->
   <link rel="stylesheet" href="src/assets/css/demo1.css" />
   <link rel="stylesheet" href="src/assets/css/style.css" />
