--- a/index.html
+++ b/index.html
@@ -11,56 +11,56 @@
   <meta name="author" content="ashishmaraviya">
 
   <!-- site Favicon -->
-  <link rel="icon" href="src/assets/images/favicon/favicon.png" sizes="32x32" />
-  <link rel="apple-touch-icon" href="src/assets/images/favicon/favicon.png" />
-  <meta name="msapplication-TileImage" content="src/assets/images/favicon/favicon.png" />
+  <link rel="icon" href="/assets/images/favicon/favicon.png" sizes="32x32" />
+  <link rel="apple-touch-icon" href="/assets/images/favicon/favicon.png" />
+  <meta name="msapplication-TileImage" content="/assets/images/favicon/favicon.png" />
 
   <!-- css Icon Font -->
-  <link rel="stylesheet" href="src/assets/css/vendor/ecicons.min.css" />
+  <link rel="stylesheet" href="/assets/css/vendor/ecicons.min.css" />
 
   <!-- css All Plugins Files -->
-  <link rel="stylesheet" href="src/assets/css/plugins/animate.css" />
-  <link rel="stylesheet" href="src/assets/css/plugins/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="src/assets/css/plugins/jquery-ui.min.css" />
-  <link rel="stylesheet" href="src/assets/css/plugins/countdownTimer.css" />
-  <link rel="stylesheet" href="src/assets/css/plugins/slick.min.css" />
-  <link rel="stylesheet" href="src/assets/css/plugins/bootstrap.css" />
-  <link rel="stylesheet" href="src/assets/css/vendor/ecicons.min.css">
+  <link rel="stylesheet" href="/assets/css/plugins/animate.css" />
+  <link rel="stylesheet" href="/assets/css/plugins/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="/assets/css/plugins/jquery-ui.min.css" />
+  <link rel="stylesheet" href="/assets/css/plugins/countdownTimer.css" />
+  <link rel="stylesheet" href="/assets/css/plugins/slick.min.css" />
+  <link rel="stylesheet" href="/assets/css/plugins/bootstrap.css" />
+  <link rel="stylesheet" href="/assets/css/vendor/ecicons.min.css">
   <!-- Main Style -->
-  <link rel="stylesheet" href="src/assets/css/demo1.css" />
-  <link rel="stylesheet" href="src/assets/css/style.css" />
-  <link rel="stylesheet" href="src/assets/css/responsive.css" />
+  <link rel="stylesheet" href="/assets/css/demo1.css" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/css/responsive.css" />
 
   <!-- Background css -->
-  <link rel="stylesheet" id="bg-switcher-css" href="src/assets/css/backgrounds/bg-4.css">
+  <link rel="stylesheet" id="bg-switcher-css" href="/assets/css/backgrounds/bg-4.css">
 </head>
 
 <body>
   <div id="root"></div>
 
   <!-- Vendor JS -->
-  <script type="module" src="src/assets/js/vendor/jquery-3.5.1.min.js"></script>
-  <script type="module" src="src/assets/js/vendor/popper.min.js"></script>
-  <script type="module" src="src/assets/js/vendor/bootstrap.min.js"></script>
-  <script type="module" src="src/assets/js/vendor/jquery-migrate-3.3.0.min.js"></script>
-  <script type="module" src="src/assets/js/vendor/modernizr-3.11.2.min.js"></script>
+  <script type="module" src="/assets/js/vendor/jquery-3.5.1.min.js"></script>
+  <script type="module" src="/assets/js/vendor/popper.min.js"></script>
+  <script type="module" src="/assets/js/vendor/bootstrap.min.js"></script>
+  <script type="module" src="/assets/js/vendor/jquery-migrate-3.3.0.min.js"></script>
+  <script type="module" src="/assets/js/vendor/modernizr-3.11.2.min.js"></script>
 
   <!-- Plugins JS -->
-  <script type="module" src="src/assets/js/plugins/swiper-bundle.min.js"></script>
-  <script type="module" src="src/assets/js/plugins/countdownTimer.min.js"></script>
-  <script type="module" src="src/assets/js/plugins/scrollup.js"></script>
-  <script type="module" src="src/assets/js/plugins/jquery.zoom.min.js"></script>
-  <script type="module" src="src/assets/js/plugins/slick.min.js"></script>
-  <script type="module" src="src/assets/js/plugins/infiniteslidev2.js"></script>
-  <script type="module" src="src/assets/js/vendor/jquery.magnific-popup.min.js"></script>
-  <script type="module" src="src/assets/js/plugins/jquery.sticky-sidebar.js"></script>
+  <script type="module" src="/assets/js/plugins/swiper-bundle.min.js"></script>
+  <script type="module" src="/assets/js/plugins/countdownTimer.min.js"></script>
+  <script type="module" src="/assets/js/plugins/scrollup.js"></script>
+  <script type="module" src="/assets/js/plugins/jquery.zoom.min.js"></script>
+  <script type="module" src="/assets/js/plugins/slick.min.js"></script>
+  <script type="module" src="/assets/js/plugins/infiniteslidev2.js"></script>
+  <script type="module" src="/assets/js/vendor/jquery.magnific-popup.min.js"></script>
+  <script type="module" src="/assets/js/plugins/jquery.sticky-sidebar.js"></script>
 
   <!-- Main JS -->
-  <script type="module" src="src/assets/js/vendor/index.js"></script>
-  <script type="module" src="src/assets/js/main.js"></script>
+  <script type="module" src="/assets/js/vendor/index.js"></script>
+  <script type="module" src="/assets/js/main.js"></script>
 
   <!-- React Entry Point -->
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="src/main.tsx"></script>
 </body>
 
 </html>
